compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__unwrap_nested_anonymous_function.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  fn(do) { fn(re){ mi(re) }(do) }\n}\n\nfn mi(v) {\n  todo\n}\n"
---
----- BEFORE ACTION
pub fn main() {
  fn(do) { fn(re){ mi(re) }(do) }
           ↑                     
}

fn mi(v) {
  todo
}


----- AFTER ACTION
pub fn main() {
  fn(do) { mi(do) }
}

fn mi(v) {
  todo
}
