compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__unwrap_trivial_anonymous_function.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "import gleam/list\n\npub fn main() {\n    list.map([1, 2, 3], fn(int) { op(int) })\n}\n\nfn op(i: Int) -> Int {\n    todo\n}\n"
---
----- BEFORE ACTION
import gleam/list

pub fn main() {
    list.map([1, 2, 3], fn(int) { op(int) })
                        ↑                   
}

fn op(i: Int) -> Int {
    todo
}


----- AFTER ACTION
import gleam/list

pub fn main() {
    list.map([1, 2, 3], op)
}

fn op(i: Int) -> Int {
    todo
}
