compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__use_label_shorthand_works_for_alternative_patterns.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub type Wibble { Wibble(arg: Int, arg2: String) }\n\npub fn main() {\n  case Wibble(1, \"wibble\") {\n    Wibble(arg2: arg2, ..) | Wibble(arg: 1, arg2: arg2) -> todo\n  }\n}\n "
---
----- BEFORE ACTION

pub type Wibble { Wibble(arg: Int, arg2: String) }

pub fn main() {
       ▔▔▔▔▔▔▔▔
  case Wibble(1, "wibble") {
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    Wibble(arg2: arg2, ..) | Wibble(arg: 1, arg2: arg2) -> todo
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
  }
}
 


----- AFTER ACTION

pub type Wibble { Wibble(arg: Int, arg2: String) }

pub fn main() {
  case Wibble(1, "wibble") {
    Wibble(arg2: , ..) | Wibble(arg: 1, arg2: ) -> todo
  }
}
