compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__wrap_anonymous_function_in_anonymous_function.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  let f = fn(in) { ception(in) }\n}\n\n"
---
----- BEFORE ACTION
pub fn main() {
  let f = fn(in) { ception(in) }
          ↑                     
}



----- AFTER ACTION
pub fn main() {
  let f = fn(value) { fn(in) { ception(in) }(value) }
}
